# grove

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  VISION.md  install.ps1  install.sh  registry-sources.json  server.pid  show_hn_pitch.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: store-query-validator.md  tomoshibi.md
.claude/commands/forge/: add-pipeline.md  add-task.md  approve.md  ask.md  check-agent.md  collate.md  commit.md  config.md  enhance.md  fix-bug.md  health.md  implement.md  init.md  new-sprint.md  plan-sprint.md  plan.md  rebuild.md  remove.md  repair.md  report-bug.md  reset.md  retro.md  review-code.md  review-plan.md  run-sprint.md  run-task.md  search.md  status.md  update.md  validate.md
.claude/skills/refresh-kb-links/: SKILL.md
.claude/skills/store-custodian/: SKILL.md
.claude/skills/store-query-grammar/: SKILL.md
.claude/skills/store-query-nlp/: SKILL.md
.claude/workflows/: wfl-run-task.js
.forge/: .bootstrap-manifest.json  config.json  generation-manifest.json  init-context.json  init-context.md  pi-settings.json  project-context.json  structure-versions.json  update-check-cache.json
.forge/.base-pack/personas/: architect.md  bug-fixer.md  collator.md  engineer.md  librarian.md  orchestrator.md  product-manager.md  qa-engineer.md  supervisor.md
.forge/.base-pack/skills/: architect-skills.md  bug-fixer-skills.md  collator-skills.md  engineer-skills.md  generic-skills.md  librarian-skills.md  (+3 more)
.forge/.claude-plugin/: plugin.json
.forge/cache/: context-pack.json  context-pack.md  persona-pack.json  post-init-fired-GROVE.json  post-sprint-GROVE-S03-enhancement-triggered  preflight-status.json  run-task-debug-GROVE-S03-T01.jsonl  run-task-debug-GROVE-S03-T02.jsonl  run-task-debug-GROVE-S03-T03.jsonl  run-task-debug-GROVE-S03-T04.jsonl  run-task-debug-GROVE-S03-T05.jsonl  run-task-debug-GROVE-S03-T06.jsonl  run-task-debug-GROVE-S03-T07.jsonl
.forge/init/: workflow-gen-plan.json
.forge/mcp/: server.cjs
.forge/meta/: skill-recommendations.md
.forge/personas/: architect.md  bug-fixer.md  collator.md  engineer.md  librarian.md  orchestrator.md  product-manager.md  qa-engineer.md  supervisor.md
.forge/schemas/: bug.schema.json  collation-state.schema.json  config.schema.json  enum-catalog.json  event-sidecar.schema.json  event.schema.json  feature.schema.json  migrations.json  payload-manifest.schema.json  progress-entry.schema.json  project-context.schema.json  project-overlay.schema.json  proposal.schema.json  sprint.schema.json  structure-manifest.json  structure-versions.schema.json  task.schema.json
.forge/skills/: architect-skills.md  bug-fixer-skills.md  collator-skills.md  engineer-skills.md  generic-skills.md  librarian-skills.md  qa-engineer-skills.md  store-custodian-skills.md  supervisor-skills.md
.forge/store/: COLLATION_STATE.json
.forge/templates/: CODE_REVIEW_TEMPLATE.md  COST_REPORT_TEMPLATE.md  PLAN_REVIEW_TEMPLATE.md  PLAN_TEMPLATE.md  PROGRESS_TEMPLATE.md  SPRINT_MANIFEST_TEMPLATE.md  SPRINT_REQUIREMENTS_TEMPLATE.md
.forge/tools/: artifact-store.cjs  artifact.cjs  backfill-provider.cjs  banners.cjs  build-context-pack.cjs  build-init-context.cjs  build-overlay.cjs  build-persona-pack.cjs  check-structure.cjs  collate.cjs  commit-task.cjs  compression-gate.cjs  delete-candidate-detector.cjs  forge-preflight.cjs  forge-usage-report.cjs  friction-emit.cjs  generation-manifest.cjs  judge-proposal.cjs  list-skills.js  manage-config.cjs  manage-versions.cjs  parse-gates.cjs  postflight-gate.cjs  preflight-gate.cjs  query-logger.cjs  queue-drain.cjs  read-verdict.cjs  replay-scoring.cjs  reset-plan.cjs  seed-store.cjs  store-cli.cjs  store-query.cjs  store.cjs  substitute-placeholders.cjs  validate-store.cjs  verify-apply.cjs  verify-integrity.cjs  verify-phase.cjs
.forge/workflows/: architect_approve.md  architect_review_sprint_completion.md  architect_sprint_intake.md  architect_sprint_plan.md  collator_agent.md  commit_task.md  enhance.md  implement_plan.md  quiz_agent.md  review_code.md  sprint_retrospective.md  triage.md  update_implementation.md  update_plan.md  validate_task.md
.github/workflows/: ci.yml  pages.yml  release.yml
.pi/forge-cli/: config.json
.pi/pi-claude-compat/: config.json
cli/: Cargo.toml
cli/src/: engine.rs  init.rs  main.rs  mcp.rs  tap.rs
cli/src/config_tui/: mod.rs  model.rs  update.rs  view.rs
cli/src/trace_tui/: mod.rs  model.rs  update.rs  view.rs
cli/tests/: cli.rs
core/: Cargo.toml
core/src/: config.rs  doctor.rs  fetch.rs  harness.rs  init.rs  lib.rs  ops.rs  proxy.rs  registry.rs  render.rs
core/src/explore/: agent.rs  client.rs  config.rs  discovery.rs  grounding.rs  health.rs  mod.rs  steering.rs  toolset.rs  trace.rs  wire.rs
core/src/explore/prompts/: explore_v2.system.md  grove_steering_coerce.md  grove_steering_merit.md  system.md  tool_grep.md  tool_grove.md  tool_read.md
docs/: SUMMARY.md  app.js  book.toml  code-quality-review-2026-07-03.md  doctor-command-proposal.md  faq.md  index.html  install.md  introduction.md  languages.md  library.md  mcp.md  reference.md  release-0.3.0-plan.md  roadmap.md  setup.md  styles.css  tools.md
docs/adr/: 0001-scope-aware-and-import-edge-resolution.md  0002-grove-project-config-and-declared-mode.md  0003-shared-verb-rendering-in-core.md
docs/assets/: grove_demo.cast
engineering/: MASTER_INDEX.md
engineering/architecture/: INDEX.md  database.md  deployment.md  processes.md  routing.md  stack-checklist.md  stack.md
engineering/business-domain/: INDEX.md  entity-model.md
engineering/features/: INDEX.md
registry/: index.json
registry/javascript/: grammar.wasm  manifest.json
registry/python/: grammar.wasm  manifest.json
registry/rust/: grammar.wasm  locals.scm  manifest.json
scripts/: bump-version.sh  setup-local-test.sh
site/: app.js  index.html  styles.css
skills/grove/: SKILL.md
src/: engine.rs  fetch.rs  ingest.rs  init.rs  main.rs  mcp.rs  ops.rs  registry.rs
templates/: CLAUDE.md.tmpl
tests/: cli.rs
(+603 files in other folders)
