[package]
name = "grove"
version = "0.0.0"
edition = "2021"
description = "Structural sight for coding agents — Phase 0 vertical slice (Rust only)"
license = "MIT"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
# Engine — wasm feature lets us load grammars from the registry at runtime,
# with no grammar compiled into this binary.
tree-sitter = { version = "0.25", features = ["wasm"] }
streaming-iterator = "0.1"

# CLI + output
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Gitignore-aware file walking (same crate ripgrep uses)
ignore = "0.4"
anyhow = "1"

# Content hashing for the lockfile
sha2 = "0.10"

# OS-native cache/config directories
dirs = "5"
