[package]
# Published as `grove-cst-cli` (`grove` is taken by an unrelated crate), but the
# installed binary stays `grove` (see `[[bin]]` below).
name = "grove-cst-cli"
version = "0.3.0"
edition = "2021"
description = "Structural, byte-precise, token-cheap access to a codebase for coding agents — tree-sitter over a CLI and an MCP server."
license = "MIT"
repository = "https://github.com/Entelligentsia/grove"
homepage = "https://github.com/Entelligentsia/grove"
readme = "README.md"
keywords = ["tree-sitter", "mcp", "code-intelligence", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
# Core library — AST engine, registry, fetch, ingest. Published as `grove-cst`;
# the imported crate name is still `grove_core` (its `[lib] name`).
grove-cst = { path = "../core", version = "=0.3.0" }

# CLI + output
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Gitignore-aware file walking (same crate ripgrep uses)
ignore = "0.4"
anyhow = "1"

# Full-screen config TUI (grove config verb)
ratatui = "0.29"
crossterm = "0.28"

