[package]
# Published as `grove-cst-cli` (`grove` is taken by an unrelated crate), but the
# installed binary stays `grove` (see `[[bin]]` below).
name = "grove-cst-cli"
version = "0.4.0"
edition = "2021"
description = "Structural, byte-precise, token-cheap access to a codebase for coding agents — tree-sitter over a CLI and an MCP server."
license = "MIT"
repository = "https://github.com/Entelligentsia/grove"
homepage = "https://github.com/Entelligentsia/grove"
readme = "README.md"
keywords = ["tree-sitter", "mcp", "code-intelligence", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
# Core library — AST engine, registry, fetch, ingest. Published as `grove-cst`;
# the imported crate name is still `grove_core` (its `[lib] name`).
grove-cst = { path = "../core", version = "=0.4.0" }

# CLI + output
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Format-preserving TOML edits for the Codex harness (~/.codex/config.toml)
toml_edit = "0.22"
# Detect which coding agents are installed (auto-selecting harnesses in `init`)
which = "7"
# Resolve the home dir for global-scope harness configs (Codex ~/.codex)
dirs = "5"

anyhow = "1"

# Full-screen config + trace TUIs (grove config / grove tap verbs)
ratatui = "0.29"
crossterm = "0.28"

