[package]
name = "grove-core"
version = "0.1.11"
edition = "2021"
description = "Core AST engine, grammar registry, fetch, and ingest for grove — the structural code-intelligence library behind the grove CLI and MCP server."
license = "MIT"
repository = "https://github.com/Entelligentsia/grove"
homepage = "https://github.com/Entelligentsia/grove"
readme = "../README.md"
keywords = ["tree-sitter", "code-intelligence", "ast", "grammar", "registry"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
# Engine — wasm feature lets us load grammars from the registry at runtime,
# with no grammar compiled into this library.
tree-sitter = { version = "0.25", features = ["wasm"] }
streaming-iterator = "0.1"

# Serialization for registry manifests and operation output structs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Gitignore-aware file walking (same crate ripgrep uses)
ignore = "0.4"
anyhow = "1"

# Content hashing for the lockfile
sha2 = "0.10"

# OS-native cache/config directories
dirs = "5"

# HTTP client for grammar fetch (blocking, rustls)
ureq = "2"
